// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal | Update proposal content update proposal body with authorized iframe. 1`] = `
Object {
  "changeProposalContent": Object {
    "proposal": Object {
      "body": "<iframe class=\\"ql-video\\" frameborder=\\"0\\" src=\\"https://www.youtube.com/embed/qCNu_vJNLMQ?showinfo=0\\"></iframe>",
      "facebookUrl": null,
      "twitterUrl": null,
      "webPageUrl": null,
    },
  },
}
`;

exports[`Internal | Update proposal content update proposal body with unauthorized iframe. 1`] = `
Object {
  "changeProposalContent": Object {
    "proposal": Object {
      "body": "<iframe class=\\"ql-video\\" frameborder=\\"0\\"></iframe>",
      "facebookUrl": null,
      "twitterUrl": null,
      "webPageUrl": null,
    },
  },
}
`;

exports[`Internal | Update proposal content update proposal with rs 1`] = `
Object {
  "changeProposalContent": Object {
    "proposal": Object {
      "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in elit eget dui bibendum luctus euismod sit amet odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Nulla mollis aliquam faucibus. Nullam pharetra mattis lacus. In vitae ex nisl. Integer faucibus, purus vitae egestas gravida, ante nisi semper magna, nec interdum est orci at purus.",
      "facebookUrl": "https://www.facebook.com/capco/",
      "twitterUrl": "https://twitter.com/karate_kid22",
      "webPageUrl": "http://cap-collectif.com",
    },
  },
}
`;
